feat(run): run and debug a main() located in test sources
A `main()` in `src/test/java` of a JPMS module could not be run or
debugged: main runnables map to the derived `main-launch.json`, whose
module path carries only the module's main output, never the test
classes. The class is compiled into the module's test output and patched
into the module at test time, so launching it against the main template
failed with "could not find or load main class ... in module".

Route a test-scope main through the module's captured test launch
instead: its test-classes are already patched into the module and its
test-scope dependency graph (module path, add-reads/opens/modules) is
captured in `test-launch.json`. That is authoritative -- test code, unlike
main code, actually runs during the build, so we reuse the capture rather
than re-deriving Surefire's modular placement.

- lathe-core: LaunchPlan.forTestMain(TestLaunchData, ..., mainClass, ...)
  builds the command from the test template with the user's class as the
  entry point (`-m module/class` or bare class) instead of the JUnit
  runner -- no runner, no selections, no results sink. The entry-point
  tail is extracted into a shared addMainEntry (reused by forMain);
  MainLaunchData is left untouched (no always-empty patchModules field --
  a test-scope main is a test-scope launch, so patch lives on
  TestLaunchData where it is real).
- lathe-server: MainClassScope.isTestScope routes by the class's mirrored
  output (test-classes only => test-scope); WorkspaceSession.resolveMainLaunch
  is the one helper both run and debug share, returning a MainLaunchPlan
  (ready, or blocked with reasons). A test-scope main with no captured
  test launch blocks with a clear "run `mvn test` to capture it".
  RunOverlay.applyToTestMain is the overlay seam.

Verified: LaunchPlan.forTestMain unit tests (module/classpath/debug),
MainClassScope unit tests, and an end-to-end debug of a new test-scope
main (HelloTester) in the modular `jpms` invo